# wasmer-pipeline

./: .env.example  README.md  ci.ts  dagger.json  deno.json  deps.ts  fluentci.toml  import_map.json  schema.graphql
.fluentci/src/github/: config.ts
.github/workflows/: ci.yml  example.yml  zenith.yml
example/: Cargo.toml  app.yaml  build.gql  deploy.gql  wasmer.toml
example/.fluentci/: README.md  dagger.json  deps.ts
example/.fluentci/.github/workflows/: example.yml  zenith.yml
example/.fluentci/example/: build.gql
example/.fluentci/example/.fluentci/: CODE_OF_CONDUCT.md
example/.fluentci/example/.fluentci/example/: app.yaml  wasmer.toml
example/.fluentci/example/.fluentci/src/dagger/: pipeline.ts
example/.fluentci/plugin/src/: lib.rs
example/.fluentci/src/aws/: README.md
example/.fluentci/src/azure/: config.ts
example/.fluentci/src/circleci/: README.md
example/.fluentci/src/dagger/: jobs.ts  lib.ts  pipeline.ts  queries.ts  schema.ts
example/.fluentci/src/github/: README.md
example/.fluentci/src/gitlab/: README.md
example/src/: main.rs
fixtures/: .gitlab-ci.yml  azure-pipelines.yml  buildspec.yml  config.yml  workflow.yml
plugin/: Cargo.toml
plugin/src/: helpers.rs
src/aws/: config.ts
src/azure/: README.md  config.ts
src/circleci/: config.ts
src/dagger/: index.ts  jobs.ts  lib.ts  list_jobs.ts  pipeline.ts  schema.ts
src/github/: config.ts
src/gitlab/: config.ts
