[package]

edition = "2021"
name = "wasmer-hello"
version = "0.1.0"
[dependencies]

axum = {version = "=0.6.9", features = ["tokio", "json"]}
serde = {version = "1.0.160", features = ["derive"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["fmt"]}
# NOTE: We need to pin and replace some dependencies to achieve wasix compatibility.

parking_lot = {version = "=0.12.1", features = ["nightly"]}
tokio = {version = "=1.24.2", default-features = false, features = ["full"]}
[patch.crates-io]
libc = {git = "https://github.com/wasix-org/libc.git", branch = "master"}
socket2 = {git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9"}
tokio = {git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.24.2"}
